--- a/manifest.json
+++ b/manifest.json
@@ -11,17 +11,17 @@
   "page_action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/get_started16.png",
-      "32": "images/get_started32.png",
-      "48": "images/get_started48.png",
-      "128": "images/get_started128.png"
+      "16": "images/LikeTabs16.png",
+      "32": "images/LikeTabs32.png",
+      "48": "images/LikeTabs48.png",
+      "128": "images/LikeTabs128.png"
     }
   },
   "icons": {
-    "16": "images/get_started16.png",
-    "32": "images/get_started32.png",
-    "48": "images/get_started48.png",
-    "128": "images/get_started128.png"
+    "16": "images/LikeTabs16.png",
+    "32": "images/LikeTabs32.png",
+    "48": "images/LikeTabs48.png",
+    "128": "images/LikeTabs128.png"
   },
   "manifest_version": 2
 }
